--- a/components/lcp/example/pubspec.yaml
+++ b/components/lcp/example/pubspec.yaml
@@ -14,5 +14,5 @@ dependencies:
 
 dependency_overrides:
   intl: ^0.19.0 # multiple_localization 0.3.0 requires intl 0.17.0
-  meta: ^1.14.0 # mno_shared 0.1.3 requires meta 1.9.1
-  collection: ^1.17.2 # universal_io 2.2.1 requires it
+  meta: ^1.16.0
+  collection: ^1.19.1
