--- a/components/lcp/pubspec.yaml
+++ b/components/lcp/pubspec.yaml
@@ -13,15 +13,15 @@ dependencies:
     sdk: flutter
   crypto: ^3.0.6
   dartx: ^1.2.0
-  device_info_plus: ^11.1.0
+  device_info_plus: ^11.2.2
   dfunc: ^0.10.0
   ffi: ^2.1.3
   fimber: ^0.7.0
   flutter_archive: ^6.0.3
   mno_fsm: ^0.2.3
-  path_provider: ^2.1.4
-  shared_preferences: ^2.3.2
-  sqflite: ^2.4.0
+  path_provider: ^2.1.5
+  shared_preferences: ^2.5.1
+  sqflite: ^2.4.1
   universal_io: ^2.2.2
   url_launcher: ^6.3.1
   uuid: ^4.5.1
@@ -32,13 +32,13 @@ dependencies:
     path: ../shared
 
 dependency_overrides:
-  intl: ^0.19.0 # multiple_localization 0.3.0 requires intl 0.17.0
+  intl: ^0.20.1 # multiple_localization 0.3.0 requires intl 0.17.0
   meta: ^1.16.0 # mno_shared 0.1.3 requires meta 1.9.1
-  collection: ^1.19.1 # universal_io 2.2.1 requires it
+  collection: ^1.19.1
 
 dev_dependencies:
-  test: ^1.25.8
-  lints: ^5.0.0
+  test: ^1.25.14
+  lints: ^5.1.1
 
 assets:
   - assets/
