--- a/components/navigator/pubspec.yaml
+++ b/components/navigator/pubspec.yaml
@@ -11,13 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^8.1.4
+  bloc: ^9.0.0
   dartx: ^1.2.0
   dfunc: ^0.10.0
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   fimber: ^0.7.0
-  flutter_bloc: ^8.1.6
-  flutter_inappwebview: ^6.1.5
+  flutter_bloc: ^9.0.0
+  flutter_inappwebview: ^6.2.0-beta.2
   flutter_spinkit: ^5.2.1
   photo_view: ^0.15.0
   preload_page_view: ^0.2.0
@@ -33,14 +33,14 @@ dependencies:
     path: ../streamer
 
 dev_dependencies:
-  test: ^1.25.8
-  lints: ^5.0.0
+  test: ^1.25.14
+  lints: ^5.1.1
 
 dependency_overrides:
   rxdart: ^0.28.0
   path: ^1.9.1
   meta: ^1.16.0 # mno_shared 0.1.3 requires meta 1.9.1
-  collection: ^1.19.1 #universal_io
+  collection: ^1.19.1
 
 flutter:
   assets:
